# colalamo

./: .gitignore  README.md  ask.sh  colalamo.py  pyproject.toml  shtoken.py
src/colalamo/: __init__.py  colalamo.py  config.py  shtoken.py
